--- a/res/testsite.yaml
+++ b/res/testsite.yaml
@@ -1,18 +1,19 @@
-'action': 'main'
-'name': "vc动漫"
-'subaction':
-- 'action': 'fetcher'
-  'url': 'http://www.verycd.com/base/cartoon/'
-  'subaction':
-  - 'action': 'parser'
-    'rule': '.entry_cover_list li'
-    'subaction':
-    - 'action': 'node'
-      'group': 'default'
-      'subaction':
-      - {'action': 'parser', 'rule': '.entry_cover
-          .cover_img', 'setField': 'img'}
-      - {'action': 'parser', 'rule': '.entry_cover
-          .score', 'setField': 'score'}
-      - {'action': 'parser', 'rule': '.bio
-          a', 'setField': 'dest'}
+action: main
+name: "vc动漫"
+subaction:
+- action: fetcher
+  url: http://www.verycd.com/base/cartoon/
+  subaction:
+  - action: parser
+    rule: .entry_cover_list li
+    subaction:
+    - action: node
+      group: default
+      subaction:
+      - {action: parser, rule: .entry_cover .cover_img, setField: img}
+      - {action: parser, rule: .entry_cover .score, setField: score}
+      - {action: parser, rule: .bio a, setField: dest}
+      - action: fetcher
+        url: http://s.taobao.com/${#dest}
+        subaction:
+        - {action: parser, rule: '#title', setField: description}
