strip = true 功能加入 可以去掉html标签

--- a/res/testsite.yaml
+++ b/res/testsite.yaml
@@ -2,7 +2,7 @@ action: main
 name: "vc动漫"
 subaction:
 - action: fetcher
-  url: http://www.verycd.com/base/cartoon/
+  url: http://www.verycd.com/base/cartoon/page
   subaction:
   - action: parser
     rule: .entry_cover_list li
@@ -10,10 +10,10 @@ subaction:
     - action: node
       group: default
       subaction:
-      - {action: parser, rule: '.entry_cover .cover_img', setField: img}
-      - {action: parser, rule: '.entry_cover .score', setField: score}
-      - {action: parser, rule: '.bio a', setField: dest}
-      - action: fetcher
-        url: http://s.taobao.com/${#dest}
-        subaction:
-        - {action: parser, rule: '#title', setField: description}
+        - {action: parser, rule: '.entry_cover .cover_img', setField: img}
+        - {action: parser, strip: 'true', rule: '.entry_cover .score', setField: score}
+        - {action: parser, rule: '.bio a', setField: dest}
+        - action: fetcher
+          url: http://s.taobao.com/${#dest}
+          subaction:
+          - {action: parser, rule: '#title', setField: description}
