--- a/res/testsite.yaml
+++ b/res/testsite.yaml
@@ -11,9 +11,10 @@ subaction:
       group: default
       subaction:
         - {action: parser, rule: '.entry_cover .cover_img', setField: img}
+        - {action: parser, rule: 'a', pos: 0, attr: href, setField: src}
         - {action: parser, strip: 'true', rule: '.entry_cover .score', setField: score}
         - {action: parser, rule: '.bio a', setField: dest}
         - action: fetcher
-          url: http://s.taobao.com/${#img}
+          url: http://www.verycd.com${#src}
           subaction:
-          - {action: parser, rule: '#title', setField: description}
+          - {action: parser, rule: '.main', setField: description}
