更新下测试用例

--- a/res/testsite.yaml
+++ b/res/testsite.yaml
@@ -2,7 +2,7 @@ action: main
 name: "vc动漫"
 subaction:
 - action: fetcher
-  url: http://www.verycd.com/base/cartoon/page${1,3}
+  url: http://www.verycd.com/base/cartoon/page${1,1}
   subaction:
   - action: parser
     rule: .entry_cover_list li
@@ -17,4 +17,4 @@ subaction:
         - action: fetcher
           url: http://www.verycd.com${#src}
           subaction:
-          - {action: parser, rule: '.main', setField: description}
+          - {action: parser,strip: 'true', rule: '#contents_more', setField: description}
