--- a/test/testsite.yaml
+++ b/test/testsite.yaml
@@ -1,32 +1,20 @@
-﻿How To Use?
-
-test.yaml
-
 action: main
 name: "vc动漫"
 subaction:
 - action: fetcher
-  url: http://www.verycd.com/base/cartoon/page
+  url: http://www.verycd.com/base/cartoon/page${1,1}${0,9}
   subaction:
   - action: parser
     rule: .entry_cover_list li
     subaction:
-    - action: node
+    - action: shell
       group: default
       subaction:
         - {action: parser, rule: '.entry_cover .cover_img', setField: img}
+        - {action: parser, rule: 'a', pos: 0, attr: href, setField: src}
         - {action: parser, strip: 'true', rule: '.entry_cover .score', setField: score}
         - {action: parser, rule: '.bio a', setField: dest}
         - action: fetcher
-          url: http://www.verycd.com/base/${#dest}
+          url: http://www.verycd.com${#src}
           subaction:
-          - {action: parser, rule: '#title', setField: description}
-
-then in your script
-
-from railgun import RailGun
-
-railgun = RailGun()
-railgun.settask(file("res/testsite.yaml"));
-railgun.fire();
-nodes = railgun.getnodes()
+          - {action: parser,strip: 'true', rule: '#contents_more', setField: description}
