--- a/demo/logging.conf
+++ b/demo/logging.conf
@@ -11,7 +11,7 @@ keys=simpleFormatter
 format=[%(asctime)s] (%(levelname)s) : %(message)s
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [handler_consoleHandler]
