--- a/demo/basic.yaml
+++ b/demo/basic.yaml
@@ -2,7 +2,7 @@ action: main
 name: "vc cartoon"
 subaction:
 - action: fetcher
-  url: http://www.verycd.com/base/cartoon/page${0,1}${0,9}
+  url: http://www.verycd.com/base/cartoon/page${0,1}${0,1}
   subaction:
   - action: parser
     rule: .entry_cover_list li
@@ -11,10 +11,16 @@ subaction:
       group: default
       subaction:
         - {action: parser, rule: '.entry_cover .cover_img', setField: img}
-        - {action: parser, rule: 'a', pos: 0, attr: href, setField: src}
+        -
+          action: parser
+          rule: 'a'
+          pos: 0
+          attr: href
+          setField: src
+          subaction:
+          - action: fetcher
+            url: http://www.verycd.com${#src}
+            subaction:
+            - {action: parser,strip: 'true', rule: '#contents_more', setField: description}
         - {action: parser, strip: 'true', rule: '.entry_cover .score', setField: score}
         - {action: parser, rule: '.bio a', setField: dest}
-        - action: fetcher
-          url: http://www.verycd.com${#src}
-          subaction:
-          - {action: parser,strip: 'true', rule: '#contents_more', setField: description}
